<resources>

    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyBGmVwzZhlWbPBfWfk_WOjcY8XwuxdjSUE</string>
    <!--    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyCqAXJEIHoRqkcTXmim0y8VXFnRR8qPPpQ</string>-->

    <string name="app_name">Apério</string>
    <string name="forgot_pass">forgot password?</string>
    <string name="new_to_aper">New to Apério?</string>
    <string name="signup">sign up</string>
    <string name="signup_as_s">Signin as Seller</string>
    <string name="let_s_disco">Let’s discover what talent is.</string>
    <string name="login">Login</string>
    <string name="already">Already have an account?</string>
    <string name="aperio_titre">Apério</string>
    <string name="login_text">Login</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Name</string>
    <string name="hint_signup">Sign Up</string>
    <string name="hint_email">Email</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="title_activity_home">Map</string>


    <string name="app_id">aperio-app_Id</string>
    <string name="server_url">https://aperio-app.herokuapp.com/parse</string>
    <string name="client_key" />
    <string name="by_acceptin">

By accepting to share your location with Aperio you agree our terms and conditions
</string>
    <string name="title_activity_myproductfragment">myproductfragment</string>
    <string name="_2_of_2">2 of 2</string>
    <string name="product_title">Product Title</string>
    <string name="add_product">Add Product</string>
    <string name="le_marche_a_port_au_prince">Le marche a Port-au-Prince</string>
    <string name="painting">Painting</string>
    <string name="atelier_macaya">Atelier Macaya</string>
    <string name="contact_seller">Contact Seller</string>
    <string name="_102_rue_louverture_port_au_prince">102, Rue Louverture Port-au-Prince</string>
    <string name="Open">Open</string>
    <string name="Close">Close</string>
    <string name="ateliermacaya_gmail_com">ateliermacaya@gmail.com</string>
    <string name="next">Next</string>
    <string name="personal_informations">Personal Informations</string>
    <string name="_1_of_2">1 of 2</string>
    <string name="hint_phone">Phone</string>
    <string name="title_activity_maps">Map</string>
    <string name="todo">TODO</string>
    <string name="enter_address_city_or_zip_code">Enter Address, City or Zip Code</string>
    <string name="what_s_on_your_mind">what\'s on your mind</string>
    <string name="send">send</string>
    <string name="account">account</string>
    <string name="message">message</string>
    <string name="favorites">favorites</string>
    <string name="settings">settings</string>
    <string name="search">search</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="list_view">list_view</string>
    <string name="logout">Logout</string>
    <string name="category">Category</string>
    <string name="profile_other">profile_other</string>
    <string name="profile_me">profile_me</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_conversation">Conversation</string>
    <string name="_2">2</string>
    <string name="search_vendor">Search Vendor</string>
    <string name="vendor_name">Vendor Name</string>
    <string name="listView">ListView</string>

</resources>
