<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/back"
    android:fitsSystemWindows="true"
    android:paddingStart="25dp"
    android:paddingEnd="25dp">

    <LinearLayout
        android:id="@+id/slogan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="false"
        android:layout_centerHorizontal="true"
        android:gravity="end"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pacifico"
            android:text="@string/aperio_titre"
            android:textColor="#fff"
            android:textSize="64sp" />

        <TextView
            android:id="@+id/let_s_disco"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:gravity="end|top"
            android:text="@string/let_s_disco"
            android:textAppearance="@style/let_s_disco"
            android:textColor="#fff"
            android:textSize="20sp" />
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/slogan"
        android:layout_alignParentStart="false"
        android:layout_centerHorizontal="true"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:orientation="vertical"
            android:padding="12dp">

            <EditText
                android:id="@+id/etEmailLogin"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="25dp"
                android:ems="10"
                android:hint="@string/hint_email"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/etPasswordLogin"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:ems="10"
                android:hint="@string/hint_password"
                android:importantForAutofill="no"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:background="#E44162"
                android:text="@string/login_text"
                android:textAppearance="@style/e44162"
                android:textColor="#fff"
                android:textSize="20sp">

            </Button>

            <TextView
                android:id="@+id/forgot_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="8dp"
                android:gravity="top"
                android:text="@string/forgot_pass"
                android:textSize="13sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/new_to_aper"
                    android:layout_width="wrap_content"
                    android:layout_height="21dp"
                    android:layout_marginTop="1dp"
                    android:gravity="center"
                    android:text="@string/new_to_aper"
                    android:textAppearance="@style/new_to_aper"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tvSignup"
                    android:layout_width="wrap_content"
                    android:layout_height="21dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="1dp"
                    android:gravity="center"
                    android:text="@string/hint_signup"
                    android:textAppearance="@style/signup"
                    android:textColor="#CE415E"
                    android:textSize="14sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/tvSignupAsSeller"
                android:layout_width="105dp"
                android:layout_height="23dp"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:gravity="center"
                android:text="@string/signup_as_s"
                android:textAppearance="@style/signup_as_s"
                android:textColor="#CE415E"
                android:textSize="14sp" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>

