<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/back">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ToolbarTheme" />

    <View
        android:id="@+id/rectangle_5"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:layout_alignParentStart="false"
        android:layout_alignParentTop="false"
        android:layout_alignParentEnd="false"
        android:layout_alignParentBottom="false"
        android:background="@drawable/rectangle" />

    <RelativeLayout
        android:id="@+id/form"
        android:layout_width="378dp"
        android:layout_height="382dp"
        android:layout_alignParentStart="false"
        android:layout_centerInParent="true"
        android:layout_marginStart="16dp"
        android:background="@android:color/transparent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edt_name"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:ems="10"
                android:hint="@string/hint_name"
                android:importantForAutofill="no"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:ems="10"
                android:hint="@string/hint_email"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:ems="10"
                android:hint="@string/hint_password"
                android:importantForAutofill="no"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/edt_cfm_password"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:ems="10"
                android:hint="@string/hint_confirm_password"
                android:importantForAutofill="no"
                android:inputType="textPassword" />


            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:background="#E44162"
                android:text="@string/hint_signup"
                android:textAppearance="@style/e44162"
                android:textColor="#fff"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:orientation="horizontal"
                tools:ignore="UselessParent">

                <TextView
                    android:id="@+id/new_to_aper"
                    android:layout_width="wrap_content"
                    android:layout_height="21dp"
                    android:layout_marginTop="1dp"
                    android:gravity="center"
                    android:text="@string/already"
                    android:textAppearance="@style/new_to_aper"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tvLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="21dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="1dp"
                    android:gravity="center"
                    android:text="@string/login"
                    android:textAppearance="@style/signup"
                    android:textColor="#CE415E"
                    android:textSize="14sp" />
            </LinearLayout>


        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>



